# talking-to-machines-ui

./: .env.example  .gitignore  MULTI_USER_ISSUES.md  README.md  app.py  check_status.py  create_simple_test.py  pyproject.toml  run_experiment.py  secrets_helper.py  test_openai.py
experiments_templates/: Trial_1-5_CTB_prompt.xlsx  public_good_experiment_prompt_template.xlsx  rct_experiment_prompt_template.xlsx  simple_test.xlsx
